- Subversion 1.7.9 security update [1] - Subversion 1.6.21 security update [2]
This release addesses the following issues security issues:
[1][2]  CVE-2013-1845: mod_dav_svn excessive memory usage from property changes
[1][2]  CVE-2013-1846: mod_dav_svn crashes on LOCK requests against activity URLs
[1][2]  CVE-2013-1847: mod_dav_svn crashes on LOCK requests against non-existant URLs
[1][2]  CVE-2013-1849: mod_dav_svn crashes on PROPFIND requests against activity URLs
[1]     CVE-2013-1884: mod_dav_svn crashes on out of range limit in log REPORT request

More information on these vulnerabilities, including the relevent advisories
and potential attack vectors and workarounds, can be found on the Subversion
security website:
    http://subversion.apache.org/security/

PR:		177646
Submitted by:	ohauer
Approved by:	portmgr (tabthorpe, erwin), lev
Security:	b6beb137-9dc0-11e2-882f-20cf30e32f6d


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315739 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/subversion16/Makefile.common
+++ b/devel/subversion16/Makefile.common
@@ -120,6 +120,7 @@ LIB_DEPENDS+=	serf-1:${PORTSDIR}/www/serf
 CONFIGURE_ARGS+=--with-serf=${LOCALBASE}
 PLIST_SUB+=	SERF=""
 .else
+CONFIGURE_ARGS+=--without-serf
 PLIST_SUB+=	SERF="@comment "
 .endif
 
