- Update to 3.2.13 to fix security vulnerabilities - Update rubygem-mail to 2.5.3 as rubygem-actionmailer-3.2.13 requires it
PR:		ports/177709
Submitted by:	Geoffroy Desvernay <dgeo@centrale-marseille.fr>
With hat:	ruby
Approved by:	portmgr (implicit)
Reviewed by:	miwi
Security:	db0c4b00-a24c-11e2-9601-000d601460a4


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315783 35697150-7ecd-e111-bb59-0022644237b5

--- a/mail/rubygem-mail/Makefile
+++ b/mail/rubygem-mail/Makefile
@@ -1,12 +1,8 @@
-# Ports collection makefile for:	rubygem-mail
-# Date created:				30 Aug 2010
-# Whom:					Eric Freeman <freebsdports@chillibear.com>
-#
+# Created by: Eric Freeman <freebsdports@chillibear.com>
 # $FreeBSD$
-#
 
 PORTNAME=	mail
-PORTVERSION=	2.4.4
+PORTVERSION=	2.5.3
 PORTEPOCH=	1
 CATEGORIES=	mail rubygems
 MASTER_SITES=	RG
