--- a/security/py-yara/Makefile
+++ b/security/py-yara/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	yara
-PORTVERSION=	1.6
+PORTVERSION=	1.7
 CATEGORIES=	security
 MASTER_SITES=	GOOGLE_CODE
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -16,7 +16,7 @@ PROJECTHOST=	yara-project
 MAKE_JOBS_SAFE=	yes
 USE_PYTHON=	yes
 USE_PYDISTUTILS=	yes
-PYDISTUTILS_EGGINFO=	yara_python-1.6-${PYTHON_VERSION:S/thon//}.egg-info
+PYDISTUTILS_EGGINFO=	yara_python-${PORTVERSION}-${PYTHON_VERSION:S/thon//}.egg-info
 
 PLIST_FILES=	%%PYTHON_SITELIBDIR%%/yara.so
 
