--- a/mail/davmail/Makefile
+++ b/mail/davmail/Makefile
@@ -1,9 +1,8 @@
 # Created by: John Prather
-#
 # $FreeBSD$
 
 PORTNAME=	davmail
-PORTVERSION=	4.1.0
+PORTVERSION=	4.2.1
 CATEGORIES=	mail java
 MASTER_SITES=	SF/davmail/davmail/${PORTVERSION}
 DISTNAME=	${PORTNAME}-src-${PORTVERSION}-${REVISION}
@@ -14,15 +13,17 @@ COMMENT=	POP/IMAP/SMTP/Caldav/Carddav/LDAP Exchange Gateway
 
 LICENSE=	GPLv2
 
-RUN_DEPENDS=	swt>=3.5:${PORTSDIR}/x11-toolkits/swt
+RUN_DEPENDS=	${JAVALIBDIR}/swt-devel.jar:${PORTSDIR}/x11-toolkits/swt-devel
 
+USE_DOS2UNIX=	build.xml
 USE_ANT=	yes
 USE_JAVA=	yes
 JAVA_VERSION=	1.6+
 ALL_TARGET=	release
-REVISION=	2042
+REVISION=	2089
 # port build number, same as on DISTNAME
 MAKE_ARGS=	-Drevision=${REVISION}
+MAKE_ENV+=	"ANT_OPTS=-Dfile.encoding=UTF-8"
 
 DATADIR=	${JAVASHAREDIR}/${PORTNAME}
 
